# vs-fgrain-cuda

./: CMakeLists.txt  README.md
.github/workflows/: linux.yml  windows.yml
source/: kernel.cu  source.cpp
